--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,5 +7,31 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@vue/test-utils": "^1.3.0",
+    "babel-core": "^6.26.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "sass": "^1.47.0",
+    "sass-loader": "^12.6.0",
+    "ts-jest": "^27.1.2",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.2",
+    "vue-class-component": "^7.2.6",
+    "vue-jest": "^3.0.7",
+    "vue-loader": "^15.9.8",
+    "vue-property-decorator": "^9.1.2",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "core-js": "^3.21.1",
+    "vue": "^2.6.14"
+  }
 }
