--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack --mode production",
+    "dev": " npx webpack serve --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +23,8 @@
     "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "core-js": "^3.21.1",
